Spacing issue is resolved on all pages after login and only one file custom.css is changed and it is commiting

--- a/assets/layouts/default/css/custom.css
+++ b/assets/layouts/default/css/custom.css
@@ -535,7 +535,7 @@ header.smaller nav a {
 
 .page-content-wrapper .page-content{
 
-    padding: 25px 30px 20px 0px;
+    padding: 25px 10px 20px 15px;
     padding-top: 80px;
 }
 header.smaller{
